fixed some alignment on mobile

--- a/components/services/WebAppDevelopment/Styles.css
+++ b/components/services/WebAppDevelopment/Styles.css
@@ -191,7 +191,7 @@
     opacity: 1;
     left: 50%;
     transform: translateX(-50%);
-    width: 297px;
+    width: 310px;
     z-index: 2;
   }
 
